@@ -1,4 +1,3 @@
-
 ./CHANGES
 ./Config.mk
 ./INSTALL
