@@ -1,7 +1,7 @@
-s@^source \$tk_library/button.tcl@auto_load tkButtonEnter@
-s@^source \$tk_library/entry.tcl@auto_load tkEntryButton1@
-s@^source \$tk_library/listbox.tcl@auto_load tkListboxMotion@
-s@^source \$tk_library/menu.tcl@auto_load tkMbEnter@
-s@^source \$tk_library/scale.tcl@auto_load tkScaleActivate@
-s@^source \$tk_library/scrollbar.tcl@auto_load tkScrollSelect@
-s@^source \$tk_library/text.tcl@auto_load tkTextButton1@
+s@source \$tk_library/button.tcl@auto_load tkButtonEnter@
+s@source \$tk_library/entry.tcl@auto_load tkEntryButton1@
+s@source \$tk_library/listbox.tcl@auto_load tkListboxMotion@
+s@source \$tk_library/menu.tcl@auto_load tkMbEnter@
+s@source \$tk_library/scale.tcl@auto_load tkScaleActivate@
+s@source \$tk_library/scrlbar.tcl@auto_load tkScrollSelect@
+s@source \$tk_library/text.tcl@auto_load tkTextButton1@
